--- a/package.json
+++ b/package.json
@@ -37,8 +37,19 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "ai": "latest",
+    "@ai-sdk/openai": "1.1.1",
+    "@ai-sdk/groq": "1.1.1",
+    "@ai-sdk/anthropic": "1.1.1",
+    "@ai-sdk/google": "1.1.1",
+    "@ai-sdk/azure": "1.1.1",
+    "@ai-sdk/vercel": "1.1.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "latest",
+    "remark-gfm": "^4.0.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
